correction mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ body{
     font-family: 'Montserrat';
     font-weight: 500;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .secHeader{
@@ -348,6 +349,9 @@ textarea {
     }
 }
 @media (max-width:576px) {
+    body{
+        overflow-x: hidden;
+    }
     .secHeader{
         flex-wrap: wrap;
         justify-content: space-around;
